--- a/alcs-frontend/src/app/features/application/proposal/soil/soil.component.html
+++ b/alcs-frontend/src/app/features/application/proposal/soil/soil.component.html
@@ -31,8 +31,8 @@
       </tr>
       <tr>
         <td class="soil-table-label">Area</td>
-        <td *ngIf="submission.soilToPlaceArea !== null">{{ submission.soilToPlaceArea }} ha</td>
-        <td *ngIf="submission.soilToRemoveArea !== null">{{ submission.soilToRemoveArea }} ha</td>
+        <td *ngIf="submission.soilToPlaceArea !== null">{{ submission.soilToPlaceArea }} m<sup>2</sup></td>
+        <td *ngIf="submission.soilToRemoveArea !== null">{{ submission.soilToRemoveArea }} m<sup>2</sup></td>
       </tr>
       <tr>
         <td class="soil-table-label">Maximum Depth</td>
