--- a/alcs-frontend/src/app/features/notice-of-intent/applicant-info/notice-of-intent-details/pfrs-details/pfrs-details.component.html
+++ b/alcs-frontend/src/app/features/notice-of-intent/applicant-info/notice-of-intent-details/pfrs-details/pfrs-details.component.html
@@ -32,11 +32,11 @@
     <div><strong>Area</strong></div>
     <div>
       {{ _noiSubmission.soilToRemoveArea }}
-      <span *ngIf="_noiSubmission.soilToRemoveArea !== null">ha</span>
+      <span *ngIf="_noiSubmission.soilToRemoveArea !== null">m<sup>2</sup></span>
     </div>
     <div>
       {{ _noiSubmission.soilToPlaceArea }}
-      <span *ngIf="_noiSubmission.soilToPlaceArea !== null">ha</span>
+      <span *ngIf="_noiSubmission.soilToPlaceArea !== null">m<sup>2</sup></span>
     </div>
 
     <div><strong>Maximum Depth</strong></div>
@@ -78,11 +78,11 @@
     <div><strong>Area</strong></div>
     <div>
       {{ _noiSubmission.soilAlreadyRemovedArea }}
-      <span *ngIf="_noiSubmission.soilAlreadyRemovedArea !== null">ha</span>
+      <span *ngIf="_noiSubmission.soilAlreadyRemovedArea !== null">m<sup>2</sup></span>
     </div>
     <div>
       {{ _noiSubmission.soilAlreadyPlacedArea }}
-      <span *ngIf="_noiSubmission.soilAlreadyPlacedArea !== null">ha</span>
+      <span *ngIf="_noiSubmission.soilAlreadyPlacedArea !== null">m<sup>2</sup></span>
     </div>
 
     <div><strong>Maximum Depth</strong></div>
