--- a/alcs-frontend/src/app/features/notice-of-intent/applicant-info/notice-of-intent-details/pofo-details/pofo-details.component.html
+++ b/alcs-frontend/src/app/features/notice-of-intent/applicant-info/notice-of-intent-details/pofo-details/pofo-details.component.html
@@ -23,7 +23,7 @@
     </div>
     <div class="grid-1"><strong>Area</strong></div>
     <div class="grid-2">
-      {{ _noiSubmission.soilToPlaceArea }} <span *ngIf="_noiSubmission.soilToPlaceArea">ha</span>
+      {{ _noiSubmission.soilToPlaceArea }} <span *ngIf="_noiSubmission.soilToPlaceArea">m<sup>2</sup></span>
     </div>
     <div class="grid-1"><strong>Maximum Depth</strong></div>
     <div class="grid-2">
@@ -47,7 +47,7 @@
     <div class="grid-1"><strong>Area</strong></div>
     <div class="grid-2">
       {{ _noiSubmission.soilAlreadyPlacedArea }}
-      <span *ngIf="_noiSubmission.soilAlreadyPlacedArea">ha</span>
+      <span *ngIf="_noiSubmission.soilAlreadyPlacedArea">m<sup>2</sup></span>
     </div>
     <div class="grid-1"><strong>Maximum Depth</strong></div>
     <div class="grid-2">
