--- a/alcs-frontend/src/app/features/notice-of-intent/decision/decision-v2/decision-input/decision-components/decision-component/pfrs-input/pfrs-input.component.html
+++ b/alcs-frontend/src/app/features/notice-of-intent/decision/decision-v2/decision-input/decision-components/decision-component/pfrs-input/pfrs-input.component.html
@@ -88,7 +88,6 @@
     </div>
     <div class="label">
       <label for="areaToRemove">Area*</label>
-      <div class="subtext">Note: 0.01 ha is 100m2</div>
     </div>
     <div>
       <mat-form-field appearance="outline" class="full-width">
@@ -100,7 +99,7 @@
           matInput
           formControlName="areaToRemove"
         />
-        <span matTextSuffix>ha</span>
+        <span matTextSuffix>m<sup>2</sup></span>
       </mat-form-field>
     </div>
     <div>
