--- a/portal-frontend/src/app/features/applications/edit-submission/proposal/naru-proposal/naru-proposal.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/proposal/naru-proposal/naru-proposal.component.html
@@ -441,7 +441,7 @@
 
     <div class="full-row">
       <label for="will-import-fill">
-        Do you need to import any fill to construct or conduct the proposed Non-farm use?
+        Do you need to import any fill to construct or conduct the proposed non-adhering residential use?
       </label>
       <div class="subtext">Fill is any material brought onto the property, including gravel for construction.</div>
       <mat-button-toggle-group
