--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/land-use/land-use.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/land-use/land-use.component.html
@@ -118,11 +118,8 @@
         <div class="subtext">Characters left: {{ 4000 - parcelsNonAgricultureUseDescriptionText.textLength }}</div>
       </div>
     </div>
-    <h5>Identify the land uses surrounding the parcel(s) under notice of intent.</h5>
-    <div class="subtext">
-      Choose the Primary Land Use Type from the drop-down list. If there is more than one land use type, choose the main
-      land use and describe all the uses under Specific Activity.
-    </div>
+    <h5>Choose and describe neighbouring land uses.</h5>
+    <div class="subtext">Choose the main land use type from the drop-down and describe the specific activities.</div>
     <div class="form-row">
       <div class="full-row">
         <label for="northLandUseType">North</label>
