--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/naru-details/naru-details.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/naru-details/naru-details.component.html
@@ -131,7 +131,7 @@
       <div class="grid-1"><strong>Volume</strong></div>
       <div class="grid-2">{{ _applicationSubmission.naruToPlaceVolume }} m<sup>3</sup></div>
       <div class="grid-1"><strong>Area</strong></div>
-      <div class="grid-2">{{ _applicationSubmission.naruToPlaceArea }} ha</div>
+      <div class="grid-2">{{ _applicationSubmission.naruToPlaceArea }} m<sup>2</sup></div>
       <div class="grid-1"><strong>Maximum Depth</strong></div>
       <div class="grid-2">{{ _applicationSubmission.naruToPlaceMaximumDepth }} m</div>
       <div class="grid-1"><strong>Average Depth</strong></div>
