--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/pofo-details/pofo-details.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/pofo-details/pofo-details.component.html
@@ -23,7 +23,7 @@
     </div>
     <div class="grid-1"><strong>Area</strong></div>
     <div class="grid-2">
-      {{ _applicationSubmission.soilToPlaceArea }} <span *ngIf="_applicationSubmission.soilToPlaceArea">ha</span>
+      {{ _applicationSubmission.soilToPlaceArea }} <span *ngIf="_applicationSubmission.soilToPlaceArea">m<sup>2</sup></span>
     </div>
     <div class="grid-1"><strong>Maximum Depth</strong></div>
     <div class="grid-2">
@@ -47,7 +47,7 @@
     <div class="grid-1"><strong>Area</strong></div>
     <div class="grid-2">
       {{ _applicationSubmission.soilAlreadyPlacedArea }}
-      <span *ngIf="_applicationSubmission.soilAlreadyPlacedArea">ha</span>
+      <span *ngIf="_applicationSubmission.soilAlreadyPlacedArea">m<sup>2</sup></span>
     </div>
     <div class="grid-1"><strong>Maximum Depth</strong></div>
     <div class="grid-2">
