--- a/portal-frontend/src/app/features/applications/application-details/naru-details/naru-details.component.html
+++ b/portal-frontend/src/app/features/applications/application-details/naru-details/naru-details.component.html
@@ -220,7 +220,7 @@
       <div class="grid-1"><strong>Area</strong></div>
       <div class="grid-2">
         {{ _applicationSubmission.naruToPlaceArea }}
-        <span *ngIf="_applicationSubmission.naruToPlaceArea !== null">ha</span>
+        <span *ngIf="_applicationSubmission.naruToPlaceArea !== null">m<sup>2</sup></span>
         <app-no-data [showRequired]="showErrors" *ngIf="_applicationSubmission.naruToPlaceArea === null"></app-no-data>
       </div>
       <div class="grid-1"><strong>Maximum Depth</strong></div>
