--- a/portal-frontend/src/app/features/public/search/notification-search-table/notification-search-table.component.html
+++ b/portal-frontend/src/app/features/public/search/notification-search-table/notification-search-table.component.html
@@ -9,7 +9,7 @@
     matSortDisableClear
   >
     <ng-container matColumnDef="fileId">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Application ID</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Notification ID</th>
       <td mat-cell *matCellDef="let element">
         <a (click)="onSelectRecord(element)">{{ element.fileNumber | emptyColumn }}</a>
       </td>
