Copy File ID to advanced search when navigating with text

--- a/alcs-frontend/src/app/shared/header/search-bar/search-bar.component.html
+++ b/alcs-frontend/src/app/shared/header/search-bar/search-bar.component.html
@@ -24,8 +24,6 @@
     </button>
   </div>
   <div class="advanced-search">
-    <a href="/search">
-      <button mat-stroked-button color="primary">Advanced Search</button>
-    </a>
+    <button mat-stroked-button color="primary" (click)="navigateToAdvancedSearch()">Advanced Search</button>
   </div>
 </div>
