--- a/portal-frontend/src/app/shared/header/header.component.scss
+++ b/portal-frontend/src/app/shared/header/header.component.scss
@@ -43,6 +43,7 @@ header {
       .logo {
         width: rem(49);
         height: rem(32);
+        cursor: pointer;
       }
       h5 {
         display: none;
