--- a/portal-frontend/src/app/features/public/search/application-search-table/application-search-table.component.html
+++ b/portal-frontend/src/app/features/public/search/application-search-table/application-search-table.component.html
@@ -63,7 +63,7 @@
     <tr class="mat-row no-data" *matNoDataRow>
       <td class="text-center" colspan="6">
         <div><b>No applications found.</b></div>
-        <div>Please adjust criteria and try again.</div>
+        <div>Please adjust search criteria and try again.</div>
       </td>
     </tr>
   </table>
@@ -78,5 +78,5 @@
 
 <div class="no-data" *ngIf="_totalCount === 0">
   <div><b>No applications found.</b></div>
-  <div>Please adjust criteria and try again.</div>
+  <div>Please adjust search criteria and try again.</div>
 </div>
