--- a/portal-frontend/src/app/features/public/search/notification-search-table/notification-search-table.component.html
+++ b/portal-frontend/src/app/features/public/search/notification-search-table/notification-search-table.component.html
@@ -16,7 +16,7 @@
     </ng-container>
 
     <ng-container matColumnDef="ownerName">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Owner Name</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Transferee</th>
       <td mat-cell *matCellDef="let element">
         {{ element.ownerName | emptyColumn }}
       </td>
@@ -63,7 +63,7 @@
     <tr class="mat-row no-data" *matNoDataRow>
       <td class="text-center" colspan="6">
         <div><b>No notice of intent found.</b></div>
-        <div>Please adjust criteria and try again.</div>
+        <div>Please adjust search criteria and try again.</div>
       </td>
     </tr>
   </table>
@@ -77,5 +77,5 @@
 </ng-container>
 <div class="no-data" *ngIf="_totalCount === 0">
   <div><b>No notifications found.</b></div>
-  <div>Please adjust criteria and try again.</div>
+  <div>Please adjust search criteria and try again.</div>
 </div>
