--- a/portal-frontend/src/app/features/public/search/public-search.component.html
+++ b/portal-frontend/src/app/features/public/search/public-search.component.html
@@ -84,7 +84,7 @@
       </div>
       <div>
         <label for="type">Type</label>
-        <app-file-type-filter-drop-down #fileTypeDropDown (fileTypeChange)="onFileTypeChange($event)" />
+        <app-file-type-filter-drop-down #fileTypeDropDown [setFileTypes]='previousFileTypes' (fileTypeChange)="onFileTypeChange($event)" />
       </div>
       <div>
         <label for="status">Status</label>
@@ -110,7 +110,7 @@
     </div>
 
     <div class="button-controls">
-      <button type="button" mat-stroked-button color="accent" (click)="onReset()">Clear</button>
+      <button type="button" mat-stroked-button color="accent" (click)="onClear()">Clear</button>
       <button type="submit" mat-flat-button color="primary" [disabled]="formEmpty || !searchForm.valid">Search</button>
     </div>
   </form>
